--- a/stransportation/index.html
+++ b/stransportation/index.html
@@ -33,13 +33,13 @@
                     <a href="#home" class="nav-link active">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#strategy" class="nav-link">Strategy</a>
+                    <a href="/stransportation/pages/stategy.html" class="nav-link">Strategy</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#services" class="nav-link">Services</a>
+                    <a href="./pages/service.html" class="nav-link">Services</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#about" class="nav-link">About</a>
+                    <a href="./pages/about.html" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
                     <a href="/stransportation/pages/contact.html" class="nav-link">Contact</a>
