--- a/stransportation/pages/about.html
+++ b/stransportation/pages/about.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/stransportation/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/about.css">
 </head>
 <body>
     <!-- ===== NAVBAR ===== -->
@@ -44,116 +45,130 @@
             </ul>
         </div>
     </header>
-     <div class="container">
-        <h1>About Transportation</h1>
+    <main class="about-page">
+    <header class="about-hero">
+        <div class="hero-content">
+            <h1>About TransitFlow</h1>
+            <p>Moving people and goods to power modern cities and connect the world.</p>
+        </div>
+    </header>
 
-        <h2>What is Transportation?</h2>
-        <p>
-            Transportation is the movement of people and goods from one place to another.
-            It plays an important role in daily life by helping people travel, work, study,
-            and trade.
-        </p>
+    <section class="strategic-goals">
+        <div class="goal-card">
+            <div class="icon">🎯</div>
+            <h3>Our Mission</h3>
+            <p>To provide safe, reliable, and accessible transportation solutions that help people reach work, school, and their loved ones efficiently.</p>
+        </div>
+        <div class="goal-card">
+            <div class="icon">👁️</div>
+            <h3>Our Vision</h3>
+            <p>To become the leading smart transportation network, recognized for innovation, seamless connectivity, and environmental sustainability.</p>
+        </div>
+        <div class="goal-card">
+            <div class="icon">💎</div>
+            <h3>Our Values</h3>
+            <p>Safety first, integrity in service, technological innovation, and a commitment to reducing our environmental impact.</p>
+        </div>
+    </section>
 
-        <h2>Types of Transportation</h2>
-        <div class="types">
-            <div class="box">
-                <h3>Land Transportation</h3>
+    <section class="transport-types">
+        <h2 class="section-title">Methods of Movement</h2>
+        <div class="type-grid">
+            <div class="type-card">
+                <span class="emoji">🚗</span>
+                <h4>Land</h4>
+                <p>Cars, Buses, Trains, and Motorcycles form the core of our daily urban transit.</p>
+            </div>
+            <div class="type-card">
+                <span class="emoji">✈️</span>
+                <h4>Air</h4>
+                <p>Airplanes and Helicopters bridge the gap between distant cities and countries.</p>
+            </div>
+            <div class="type-card">
+                <span class="emoji">🚢</span>
+                <h4>Water</h4>
+                <p>Boats, Ships, and Ferries facilitate global trade and scenic travel.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="details-section">
+        <div class="detail-box">
+            <h3>Why Transportation Matters</h3>
+            <ul>
+                <li><strong>Saves Time:</strong> High-speed travel makes life easier.</li>
+                <li><strong>Economic Support:</strong> Moves goods and supports global business.</li>
+                <li><strong>Connectivity:</strong> Brings people together across borders.</li>
+            </ul>
+        </div>
+        <div class="detail-box">
+            <h3>Safety & Responsibility</h3>
+            <ul>
+                <li><strong>Traffic Rules:</strong> Strict adherence to local laws.</li>
+                <li><strong>Personal Gear:</strong> Wear seatbelts and helmets every time.</li>
+                <li><strong>Awareness:</strong> Promoting safe driving and pollution reduction.</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- ===== FOOTER ===== -->
+    <footer>
+        <div class="container footer-container">
+            <div class="footer-logo">
+                <a href="#home" class="logo">
+                    <div class="logo-icon">
+                        <i class="fas fa-route"></i>
+                    </div>
+                    <div class="logo-text">Transit<span>Flow</span></div>
+                </a>
+                <p style="margin-top: 1rem; color: rgba(255, 255, 255, 0.7);">Smart transportation solutions for modern
+                    cities.</p>
+                <div class="social-links">
+                    <a href="#https://www.facebook.com/" class="social-icon" aria-label="Facebook">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="#https://github.com" class="social-icon" aria-label="Github">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="#https://www.youtube.com/" class="social-icon" aria-label="Youtube">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                    <a href="#https://www.linkedin.com/" class="social-icon" aria-label="LinkedIn">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                </div>
+            </div>
+
+            <div class="footer-links">
+                <h3>Quick Links</h3>
                 <ul>
-                    <li>Car</li>
-                    <li>Bus</li>
-                    <li>Train</li>
-                    <li>Motorcycle</li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#stragy">Strategy</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#about">About Us</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
 
-            <div class="box">
-                <h3>Air Transportation</h3>
-                <ul>
-                    <li>Airplane</li>
-                    <li>Helicopter</li>
-                </ul>
-            </div>
-
-            <div class="box">
-                <h3>Water Transportation</h3>
-                <ul>
-                    <li>Boat</li>
-                    <li>Ship</li>
-                    <li>Ferry</li>
-                </ul>
+            <div class="footer-contact">
+                <h3>Contact Info</h3>
+                <p style="color: rgba(255, 255, 255, 0.7); margin-bottom: 0.5rem;">
+                    <i class="fas fa-map-marker-alt" style="margin-right: 0.5rem;"></i> Sangkat Tek Thla, Khan
+                    <Ri:viewport>ussey Keo, Phnom Penh</Ri:viewport>
+                </p>
+                <p style="color: rgba(255, 255, 255, 0.7); margin-bottom: 0.5rem;">
+                    <i class="fas fa-phone" style="margin-right: 0.5rem;"></i> (+855) 81 906 064
+                </p>
+                <p style="color: rgba(255, 255, 255, 0.7);">
+                    <i class="fas fa-envelope" style="margin-right: 0.5rem;"></i> Transitflow@gmail.com
+                </p>
             </div>
         </div>
 
-        <h2>Importance of Transportation</h2>
-        <ul>
-            <li>Helps people travel to work and school</li>
-            <li>Moves goods and products</li>
-            <li>Supports business and economy</li>
-            <li>Connects cities and countries</li>
-        </ul>
-
-        <h2>Advantages and Disadvantages</h2>
-        <p><strong>Advantages:</strong> Saves time, makes life easier, connects people.</p>
-        <p><strong>Disadvantages:</strong> Traffic, pollution, and accidents.</p>
-
-        <!-- ===== FOOTER ===== -->
-        <footer>
-            <div class="container footer-container">
-                <div class="footer-logo">
-                    <a href="#home" class="logo">
-                        <div class="logo-icon">
-                            <i class="fas fa-route"></i>
-                        </div>
-                        <div class="logo-text">Transit<span>Flow</span></div>
-                    </a>
-                    <p style="margin-top: 1rem; color: rgba(255, 255, 255, 0.7);">Smart transportation solutions for modern
-                        cities.</p>
-                    <div class="social-links">
-                        <a href="#https://www.facebook.com/" class="social-icon" aria-label="Facebook">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a href="#https://github.com" class="social-icon" aria-label="Github">
-                            <i class="fab fa-github"></i>
-                        </a>
-                        <a href="#https://www.youtube.com/" class="social-icon" aria-label="Youtube">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                        <a href="#https://www.linkedin.com/" class="social-icon" aria-label="LinkedIn">
-                            <i class="fab fa-linkedin-in"></i>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="footer-links">
-                    <h3>Quick Links</h3>
-                    <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#stragy">Strategy</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#about">About Us</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </div>
-
-                <div class="footer-contact">
-                    <h3>Contact Info</h3>
-                    <p style="color: rgba(255, 255, 255, 0.7); margin-bottom: 0.5rem;">
-                        <i class="fas fa-map-marker-alt" style="margin-right: 0.5rem;"></i> Sangkat Tek Thla, Khan
-                        <Ri:viewport>ussey Keo, Phnom Penh</Ri:viewport>
-                    </p>
-                    <p style="color: rgba(255, 255, 255, 0.7); margin-bottom: 0.5rem;">
-                        <i class="fas fa-phone" style="margin-right: 0.5rem;"></i> (+855) 81 906 064
-                    </p>
-                    <p style="color: rgba(255, 255, 255, 0.7);">
-                        <i class="fas fa-envelope" style="margin-right: 0.5rem;"></i> Transitflow@gmail.com
-                    </p>
-                </div>
-            </div>
-
-            <div class="copyright">
-                <p>&copy; 2023 TransitFlow. All rights reserved. | Designed for modern transportation solutions.</p>
-            </div>
-        </footer>
-    </div>
+        <div class="copyright">
+            <p>&copy; 2023 TransitFlow. All rights reserved. | Designed for modern transportation solutions.</p>
+        </div>
+    </footer>
+</main>
 </body>
 </html>
