--- a/stransportation/index.html
+++ b/stransportation/index.html
@@ -33,7 +33,7 @@
                     <a href="#home" class="nav-link active">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/stransportation/pages/stategy.html" class="nav-link">Strategy</a>
+                    <a href="./pages/stategy.html" class="nav-link">Strategy</a>
                 </li>
                 <li class="nav-item">
                     <a href="./pages/service.html" class="nav-link">Services</a>
