--- a/stransportation/pages/stategy.html
+++ b/stransportation/pages/stategy.html
@@ -192,65 +192,58 @@
                 <div class="main_card">
                     <div class="card-info">
                          <i class="fas fa-balance-scale"></i>
-                         <h4>Volatile Costs</h4>
-                         <span>Fuel prices, insurance, and maintenance costs</span>
+                         <h4>Cost Hedging</h4>
+                         <span> Fuel hedging programs and dynamic pricing models</span>
                     </div>
                     <div class="card-info">
                          <i class="fas fa-balance-scale"></i>
-                         <h4>Regulatory Compliance</h4>
-                         <span>Emissions standards, safety regulations.</span>
+                         <h4>Compliance Technology</h4>
+                         <span> Automated systems for regulatory reporting.</span>
                     </div>
                     <div class="card-info">
                          <i class="fas fa-balance-scale"></i>
-                         <h4>Talent Shortages</h4>
+                         <h4>Talent Development</h4>
                          <span>Driver and technician recruitment and retention</span>
                     </div>
                     <div class="card-info">
                          <i class="fas fa-balance-scale"></i>
-                         <h4>Technology Disruption</h4>
-                         <span>Adapting to automation, AI, and new business <span>
+                         <h4>Innovation Labs</h4>
+                         <span>Adapting to automation, AI, and new business. <span>
                     </div>
                     <div class="card-info">
                          <i class="fas fa-balance-scale"></i>
-                         <h4>Cyclical Demand</h4>
-                         <span>Sensitivity to economic conditions<span>
+                         <h4>Diversification</h4>
+                         <span>Multiple revenue streams to counter cyclicality<span>
                     </div>
                 </div>
             </div>
                 
             <div class="tab-content" id="metrics">
-                    <!-- <ul>
-                        <li><strong>Asset Utilization:</strong> Load factors, vehicle uptime, route optimization</li>
-                        <li><strong>Cost per Mile:</strong> Overall operational efficiency metric</li>
-                        <li><strong>Customer Satisfaction:</strong> NPS scores, on-time delivery rates</li>
-                        <li><strong>Sustainability Metrics:</strong> Carbon emissions per shipment, fuel efficiency</li>
-                        <li><strong>Technology ROI:</strong> Return on digital transformation investments</li>
-                    </ul> -->
                 <div class="main_card">
                     <div class="card-informa">
                          <i class="fas fa-balance-scale"></i>
-                         <h4>Volatile Costs</h4>
-                         <span>Fuel prices, insurance, and maintenance costs</span>
+                         <h4>Asset Utilization</h4>
+                         <span>Load factors, vehicle uptime, route optimization</span>
                     </div>
                     <div class="card-informa">
                          <i class="fas fa-balance-scale"></i>
-                         <h4>Regulatory Compliance</h4>
-                         <span>Emissions standards, safety regulations.</span>
+                         <h4>Cost per Mile</h4>
+                         <span>Overall operational efficiency metric</span>
                     </div>
                     <div class="card-informa">
                          <i class="fas fa-balance-scale"></i>
-                         <h4>Talent Shortages</h4>
-                         <span>Driver and technician recruitment and retention</span>
+                         <h4>Customer Satisfaction</h4>
+                         <span>NPS scores, on-time delivery rates</span>
                     </div>
                     <div class="card-informa">
                          <i class="fas fa-balance-scale"></i>
-                         <h4>Technology Disruption</h4>
-                         <span>Adapting to automation, AI, and new business <span>
+                         <h4>Sustainability Metrics</h4>
+                         <span>Carbon emissions per shipment, fuel efficiency<span>
                     </div>
                     <div class="card-informa">
                          <i class="fas fa-balance-scale"></i>
-                         <h4>Cyclical Demand</h4>
-                         <span>Sensitivity to economic conditions<span>
+                         <h4>Technology ROI</h4>
+                         <span>Return on digital transformation investments<span>
                     </div>
                 </div>
             </div>
