--- a/stransportation/index.html
+++ b/stransportation/index.html
@@ -174,7 +174,7 @@
                     it easier than ever to move people and goods across the city.</p>
                 <p>With a focus on innovation and sustainability, we're committed to reducing traffic congestion,
                     lowering carbon emissions, and improving the quality of urban life.</p>
-                <a href="#contact" class="btn btn-primary" style="margin-top: 1.5rem;">Get In Touch</a>
+                <a href="/stransportation/pages/contact.html" class="btn btn-primary" style="margin-top: 1.5rem;">Get In Touch</a>
             </div>
             <div class="about-image">
                 <!-- Using Unsplash placeholder image for transportation -->
@@ -217,10 +217,10 @@
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#stragy">Strategy</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="/stransportation/pages/stategy.html">Strategy</a></li>
+                    <li><a href="/stransportation/pages/service.html">Services</a></li>
+                    <li><a href="/stransportation/pages/about.html">About Us</a></li>
+                    <li><a href="/stransportation/pages/contact.html">Contact</a></li>
                 </ul>
             </div>
 
@@ -240,7 +240,7 @@
         </div>
 
         <div class="copyright">
-            <p>&copy; 2023 TransitFlow. All rights reserved. | Designed for modern transportation solutions.</p>
+            <p>&copy; 2026 TransitFlow. All rights reserved. | Designed for modern transportation solutions.</p>
         </div>
     </footer>
 </body>
