--- a/stransportation/pages/about.html
+++ b/stransportation/pages/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/about.css">
 </head>
@@ -28,7 +29,7 @@
             <!-- Navigation Menu -->
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="../index.html" class="nav-link active">Home</a>
+                    <a href="../index.html" class="nav-link ">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="./stategy.html" class="nav-link">Strategy</a>
@@ -37,7 +38,7 @@
                     <a href="./service.html" class="nav-link">Services</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#about" class="nav-link">About</a>
+                    <a href="#about" class="nav-link active">About</a>
                 </li>
                 <li class="nav-item">
                     <a href="/stransportation/pages/contact.html" class="nav-link">Contact</a>
@@ -142,11 +143,11 @@
             <div class="footer-links">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#stragy">Strategy</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="/stransportation/index.html">Home</a></li>
+                    <li><a href="/stransportation/pages/stategy.html">Strategy</a></li>
+                    <li><a href="/stransportation/pages/service.html">Services</a></li>
+                    <li><a href="/stransportation/pages/about.html">About Us</a></li>
+                    <li><a href="/stransportation/pages/contact.html">Contact</a></li>
                 </ul>
             </div>
 
@@ -166,7 +167,7 @@
         </div>
 
         <div class="copyright">
-            <p>&copy; 2023 TransitFlow. All rights reserved. | Designed for modern transportation solutions.</p>
+            <p>&copy; 2026 TransitFlow. All rights reserved. | Designed for modern transportation solutions.</p>
         </div>
     </footer>
 </main>
