--- a/stransportation/pages/stategy.html
+++ b/stransportation/pages/stategy.html
@@ -20,7 +20,7 @@
             </button>
             <nav id="mainNav">
                 <ul>
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="#strategies">Strategies</a></li>
                     <li><a href="#frameworks">Frameworks</a></li>
                     <li><a href="#action">Action Plan</a></li>
