--- a/stransportation/index.html
+++ b/stransportation/index.html
@@ -42,7 +42,7 @@
                     <a href="./pages/about.html" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/stransportation/pages/contact.html" class="nav-link">Contact</a>
+                    <a href="./pages/contact.html" class="nav-link">Contact</a>
                 </li>
             </ul>
         </div>
