--- a/stransportation/pages/contact.html
+++ b/stransportation/pages/contact.html
@@ -53,7 +53,9 @@
     <section class="contact-banner">
         <div class="container">
             <h1>Contact Us</h1>
-            <p>We'd love to hear from you. Get in touch with our team.</p>
+            <p>We'd love to hear from you. Get in touch with our team.
+                We always respond within 24 hours. 
+                Although we may not be able to reply immediately, we will get back to you as soon as possible.</p>
         </div>
     </section>
 
