--- a/stransportation/pages/contact.html
+++ b/stransportation/pages/contact.html
@@ -23,7 +23,7 @@
             </a>
 
             <!-- Mobile Menu Toggle -->
-            <input type="checkbox" id="mobile-toggle" class="mobile-toggle-checkbox">
+            <!-- <input type="checkbox" id="mobile-toggle" class="mobile-toggle-checkbox"> -->
             <label for="mobile-toggle" class="mobile-toggle" aria-label="Toggle navigation menu">
                 <i class="fas fa-bars"></i>
             </label>
