--- a/stransportation/pages/stategy.html
+++ b/stransportation/pages/stategy.html
@@ -407,10 +407,10 @@
                 <div class="footer-column">
                     <h3>Contact Us</h3>
                     <ul>
-                        <li><i class="fas fa-envelope"></i> info@transstrategy.com</li>
-                        <li><i class="fas fa-phone"></i> +1 (555) 123-4567</li>
-                        <li><i class="fas fa-map-marker-alt"></i> 123 Logistics Ave, Suite 500</li>
-                        <li><i class="fas fa-city"></i> Chicago, IL 60601</li>
+                        <li><i class="fas fa-envelope"></i> Transitflow@gmail.com</li>
+                        <li><i class="fas fa-phone"></i>(+855) 81 906 064</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Sangkat Tek Thla, Khan  <Ri:viewport>ussey Keo, Phnom Penh</li>
+                        <!-- <li><i class="fas fa-city"></i> Chicago, IL 60601</li> -->
                     </ul>
                 </div>
             </div>
