--- a/stransportation/pages/service.html
+++ b/stransportation/pages/service.html
@@ -9,14 +9,6 @@
 </head>
 
 <body>
-    <!-- Navigation -->
-    <!-- <nav>
-        <a href="../index.html">Home</a> 
-        <a href="../pages/stategy.html">stategy</a> 
-        <a href="../pages/about.html">About</a>
-        <a href="../pages/service.html">Service</a>
-        <a href="../pages/contact.html">Contact</a>
-    </nav> -->
      <!-- ===== NAVBAR ===== -->
     <header class="navbar" id="navbar">
         <div class="container nav-container">
@@ -43,10 +35,10 @@
                     <a href="./stategy.html" class="nav-link">Strategy</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./service.html" class="nav-link">Services</a>
+                    <a href="./service.html" class="nav-link active">Services</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#about" class="nav-link active">About</a>
+                    <a href="./about.html" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
                     <a href="/stransportation/pages/contact.html" class="nav-link">Contact</a>
