--- a/stransportation/pages/about.html
+++ b/stransportation/pages/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/about.css">
 </head>
@@ -72,22 +73,28 @@
     </section>
 
     <section class="transport-types">
-        <h2 class="section-title">Methods of Movement</h2>
+        <h2 class="">Methods of Movement</h2>
         <div class="type-grid">
             <div class="type-card">
-                <span class="emoji">🚗</span>
-                <h4>Land</h4>
-                <p>Cars, Buses, Trains, and Motorcycles form the core of our daily urban transit.</p>
+                <div class="service-icon">
+                    <i class="fas fa-shipping-fast"></i>
+                </div>
+                <h4>Ride Hailing</h4>
+                <p>Quick and reliable ride-hailing service with professional drivers and real-time tracking.</p>
             </div>
             <div class="type-card">
-                <span class="emoji">✈️</span>
-                <h4>Air</h4>
-                <p>Airplanes and Helicopters bridge the gap between distant cities and countries.</p>
+                 <div class="service-icon">
+                    <i class="fas fa-bus"></i>
+                 </div>
+                <h4>City Transit</h4>
+                <p>Efficient public transportation routes and schedules with live arrival updates.</p>
             </div>
             <div class="type-card">
-                <span class="emoji">🚢</span>
-                <h4>Water</h4>
-                <p>Boats, Ships, and Ferries facilitate global trade and scenic travel.</p>
+                <div class="service-icon">
+                    <i class="fas fa-bicycle"></i>
+                </div>
+                <h4>Bike Sharing</h4>
+                <p>Access to bike-sharing stations across the city for short, eco-friendly trips.</p>
             </div>
         </div>
     </section>
