--- a/stransportation/index.html
+++ b/stransportation/index.html
@@ -21,11 +21,11 @@
                 <div class="logo-text">Transit<span>Flow</span></div>
             </a>
 
-            <!-- Mobile Menu Toggle -->
+            <!-- Mobile Menu Toggle
             <input type="checkbox" id="mobile-toggle" class="mobile-toggle-checkbox">
             <label for="mobile-toggle" class="mobile-toggle" aria-label="Toggle navigation menu">
                 <i class="fas fa-bars"></i>
-            </label>
+            </label> -->
 
             <!-- Navigation Menu -->
             <ul class="nav-menu">
