--- a/stransportation/pages/about.html
+++ b/stransportation/pages/about.html
@@ -21,10 +21,10 @@
             </a>
 
             <!-- Mobile Menu Toggle -->
-            <input type="checkbox" id="mobile-toggle" class="mobile-toggle-checkbox">
+            <!-- <input type="checkbox" id="mobile-toggle" class="mobile-toggle-checkbox">
             <label for="mobile-toggle" class="mobile-toggle" aria-label="Toggle navigation menu">
                 <i class="fas fa-bars"></i>
-            </label>
+            </label> -->
 
             <!-- Navigation Menu -->
             <ul class="nav-menu">
