--- a/stransportation/pages/contact.html
+++ b/stransportation/pages/contact.html
@@ -140,19 +140,19 @@
             <div class="contact-icons">
                 <a href="#" class="icon-item" id="phone-icon" title="Phone">
                     <span class="icon">📱</span>
-                    <p>Phone</p>
+                    <p style="color: white;">Phone</p>
                 </a>
                 <a href="https://t.me/yourusername" class="icon-item" title="Telegram">
                     <span class="icon">📞</span>
-                    <p>Telegram</p>
+                    <p style="color:white;">Telegram</p>
                 </a>
                 <a href="https://facebook.com" class="icon-item" title="Facebook">
                     <span class="icon">Ⓜ️</span>
-                    <p>Facebook</p>
+                    <p style="color: white;">Facebook</p>
                 </a>
                 <a href="https://mail.google.com" target="_blank" class="icon-item" title="Email">
                     <span class="icon">✉️</span>
-                    <p>Email</p>
+                    <p style="color: white;">Email</p>
                 </a>
             </div>
         </div>
