--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transportation</title>
+    <title></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/stransportation/css/style.css">
 </head>
@@ -33,16 +33,16 @@
                     <a href="#home" class="nav-link active">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./pages/stategy.html" class="nav-link">Strategy</a>
+                    <a href="/stransportation/pages/stategy.html" class="nav-link">Strategy</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./pages/service.html" class="nav-link">Services</a>
+                    <a href="/stransportation/pages/service.html" class="nav-link">Services</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./pages/about.html" class="nav-link">About</a>
+                    <a href="/stransportation/pages/about.html" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./pages/contact.html" class="nav-link">Contact</a>
+                    <a href="/stransportation/pages/contact.html" class="nav-link">Contact</a>
                 </li>
             </ul>
         </div>
