--- a/stransportation/pages/contact.html
+++ b/stransportation/pages/contact.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transportation</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="/stransportation/css/style.css">
     <link rel="stylesheet" href="/stransportation/css/contact.css">
 </head>
 
@@ -31,16 +30,16 @@
             <!-- Navigation Menu -->
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="../index.html" class="nav-link ">Home</a>
+                    <a href="/index.html" class="nav-link ">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="../pages/stategy.html" class="nav-link">Strategy</a>
+                    <a href="/stransportation/pages/stategy.html" class="nav-link">Strategy</a>
                 </li>
                 <li class="nav-item">
-                    <a href="../pages/service.html" class="nav-link">Services</a>
+                    <a href="/stransportation/pages/service.html" class="nav-link">Services</a>
                 </li>
                 <li class="nav-item">
-                    <a href="../pages/about.html" class="nav-link">About</a>
+                    <a href="/stransportation/pages/about.html" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
                     <a href="/stransportation/pages/contact.html" class="nav-link active">Contact</a>
@@ -236,7 +235,7 @@
             <div class="footer-links">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="/stransportation/index.html">Home</a></li>
+                    <li><a href="/index.html">Home</a></li>
                     <li><a href="/stransportation/pages/stategy.html">Strategy</a></li>
                     <li><a href="/stransportation/pages/service.html">Services</a></li>
                     <li><a href="/stransportation/pages/about.html">About Us</a></li>
