--- a/stransportation/pages/stategy.html
+++ b/stransportation/pages/stategy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/statrgy.css">
+    <link rel="stylesheet" href="/stransportation/css/statrgy.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Transportation</title>
 </head>
@@ -20,7 +20,7 @@
             </button>
             <nav id="mainNav">
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="/index.html">Home</a></li>
                     <li><a href="#strategies">Strategies</a></li>
                     <li><a href="#frameworks">Frameworks</a></li>
                     <li><a href="#action">Action Plan</a></li>
