--- a/stransportation/pages/contact.html
+++ b/stransportation/pages/contact.html
@@ -7,6 +7,7 @@
     <title>Transportation</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/stransportation/css/contact.css">
+    <link rel="stylesheet" href="/stransportation/css/style.css">
 </head>
 
 <body>
@@ -30,7 +31,7 @@
             <!-- Navigation Menu -->
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="/index.html" class="nav-link ">Home</a>
+                    <a href="#home" class="nav-link active">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="/stransportation/pages/stategy.html" class="nav-link">Strategy</a>
@@ -42,7 +43,7 @@
                     <a href="/stransportation/pages/about.html" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/stransportation/pages/contact.html" class="nav-link active">Contact</a>
+                    <a href="/stransportation/pages/contact.html" class="nav-link">Contact</a>
                 </li>
             </ul>
         </div>
