--- a/stransportation/pages/service.html
+++ b/stransportation/pages/service.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Transportation Services</title>
-    <link rel="stylesheet" href="/stransportation/css/service.css">
+    <!-- <link rel="stylesheet" href="/stransportation/css/service.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="../css/service.css">
+    <!-- <link rel="stylesheet" href="../css/service.css"> -->
+     <!-- <link rel="stylesheet" href="/stransportation/css/service.css"> -->
 </head>
 
 <body>
