--- a/stransportation/pages/service.html
+++ b/stransportation/pages/service.html
@@ -46,7 +46,7 @@
                     <a href="./service.html" class="nav-link">Services</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#about" class="nav-link active">About</a>
+                    <a href="./about.html" class="nav-link active">About</a>
                 </li>
                 <li class="nav-item">
                     <a href="/stransportation/pages/contact.html" class="nav-link">Contact</a>
