--- a/stransportation/pages/contact.html
+++ b/stransportation/pages/contact.html
@@ -31,7 +31,7 @@
             <!-- Navigation Menu -->
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="#home" class="nav-link active">Home</a>
+                    <a href="/index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="/stransportation/pages/stategy.html" class="nav-link">Strategy</a>
@@ -43,7 +43,7 @@
                     <a href="/stransportation/pages/about.html" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/stransportation/pages/contact.html" class="nav-link">Contact</a>
+                    <a href="/stransportation/pages/contact.html" class="nav-link active">Contact</a>
                 </li>
             </ul>
         </div>
